# ReFramed-plugin-stats

./: CMakeLists.txt  README.md
forms/: SettingsView.ui  StatsView.ui
include/stats/: StatType.hpp  StatsPlugin.hpp
include/stats/exporters/: OBSExporter.hpp
include/stats/listeners/: SettingsListener.hpp  StatsListener.hpp
include/stats/models/: PlayerMeta.hpp  SettingsModel.hpp  StatisticType.hpp  StatsCalculator.hpp  StatsModel.hpp  UserLabelCategory.hpp  UserLabelsModel.hpp
include/stats/util/: StatsFormatter.hpp
include/stats/views/: MainView.hpp  SettingsDragWidget.hpp  SettingsStatsItem.hpp  SettingsView.hpp  StatsView.hpp
src/: Plugin.cpp  StatType.cpp  StatsPlugin.cpp
src/exporters/: OBSExporter.cpp
src/models/: PlayerMeta.cpp  SettingsModel.cpp  StatisticType.cpp  StatsCalculator.cpp  StatsModel.cpp  UserLabelsModel.cpp
src/util/: StatsFormatter.cpp
src/views/: LicenseDialog.cpp  MainView.cpp  SettingsDragWidget.cpp  SettingsDragWidget.cpp.autosave  SettingsStatsItem.cpp  SettingsView.cpp  StatsView.cpp
src/widgets/: SettingsStatsItem.cpp
